Adjust margins to prevent top of cat frame from being cut off

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -13,7 +13,7 @@ h1 {
 	margin-top: 0;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 0;
 	font-weight: 600;
 }
 
@@ -28,6 +28,10 @@ h1 {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
+}
+
+.flip-items {
+	margin-top: 15px;
 }
 
 .image-post-data {
@@ -70,6 +74,7 @@ h1 {
 
 #button-holder {
 	text-align: center;
+	height: 45px;
 }
 
 .noselect {
@@ -82,7 +87,7 @@ h1 {
 }
 
 .my-flipster {
-	height: 470px;
+	height: 480px;
 }
 
 .flipster__item {
@@ -108,7 +113,6 @@ h1 {
 	margin-right: auto;
 }
 .cat-div {
-	/*max-height: 400px;*/
 	max-width: 400px;
 }
 
@@ -138,9 +142,5 @@ h1 {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-	}
-
-	.cat-div {
-
 	}
 }
